@@ -3,11 +3,11 @@
     /* OSWA Codeine
      * @author BreathLess
      * @type Codeine Driver
-     * @description: Dumper Runner
+     * @description: Profile Executor
      * @package Codeine
      * @subpackage Drivers
-     * @version 0.1
+     * @version 0,1
      * @date 24.11.10
-     * @time 3:05
+     * @time 3:04
      */
 
